Fixed FTP VFS bugs